<resources>
    <string name="app_name">FlashFetch</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="submit">Submit</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="title_activity_register">Register</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_phone">Phone Number</string>
    <string name="title_activity_deals">Deals</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_confirm__register">Confirm_Register</string>

    <string name="details">Verify Your Details</string>
    <string name="person_name">Name:</string>
    <string name="phone">Phone:</string>
    <string name="email">Email:</string>

    <string name="profile_key">PROFILE_KEY</string>

    <string name="image_description">Image Description</string>
    <string name="product_name">Product</string>
    <string name="price">"Price: Rs "</string>
    <string name="button_detail">More Details</string>
    <string name="button_quote">Quotes</string>
    <string name="price_offered">"Price Offered: Rs "</string>
    <string name="title_activity_quotes">Quotes</string>

    <string name="seller_name">"Seller: "</string>
    <string name="button_bargain">Bargain</string>
    <string name="button_accept">Accept</string>
    <string name="price_quoted">"Price Quoted: Rs "</string>
    <string name="set_seller">"Name of the Seller"</string>

    <string name="new_price">New Price</string>
    <string name="title_activity_chat">Chat</string>
    <string name="prompt_message">Type a message</string>

    <string name="prompt_extract">"Is this the product you wanted?"</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="seller_accepted">Seller Accepted Your Deal</string>
    <string name="prompt_accept">Select your delivery type</string>
    <string name="ok_button">OK</string>
    <string name="home_del_button">Home Delivery</string>
    <string name="visit_shop_button">Visit Shop</string>
    <string name="refer">Enter Referal Code</string>
    <string name="enter_button">Enter</string>
    <string name="skip">skip</string>
    <string name="title_activity_refer">Refer</string>
    <string name="title_activity_offer">Offer</string>
    <string name="title_activity_home_delivery">HomeDelivery</string>

    <string name="nav_refer">Invite &amp; Earn</string>
    <string name="title_activity_contact_us">ContactUs</string>
    <string name="title_activity_fill__address">Fill_Address</string>
    <string name="title_activity_wallet">Wallet</string>
    <string name="total_credit">Total Credits</string>
    <string name="invite_text">INVITE FRIENDS TO EARN MORE</string>
    <string name="message">Your friend will get ₹50 for downloading the app and you will receive... </string>
    <string name="chooser_title">Share Your Code</string>
    <string name="title_activity_refer_and_earn">ReferAndEarn</string>
    <string name="title_activity_account">Account</string>
    <string name="title_activity_address">Address</string>
    <string name="title_activity_verify_email">VerifyEmail</string>

    <string name="verify_email">We have sent a verification code to your registered mobile number. Please check and enter it
        here to verify your account.</string>

    <string name="newestFirst">Newest First</string>
    <string name="price_low_to_high">Price-Low to High</string>
    <string name="price_high_to_low">Price-High to Low</string>
    <string name="distance">Distance</string>
    <string name="title_activity_max_response">MaxResponse</string>
    <string name="title_activity_feedback1">Feedback1</string>
    <string name="title_activity_feedback2">Feedback2</string>

    <string name="profile">Profile</string>
    <string name="delivery_address">Delivery Address</string>

    <string name="how_to_avail_deal">1. Activate the deal by clicking "Activate Deal" \n2. Get details of the store and visit the store \n3. Carry your phone and show the deal to merchant \n4. Merchant verifies the deal and you can redeem it with the code.</string>

    <string name="otp_retry_text">Retry (\%s\")</string>

    <string name="shop_name">Shop Name</string>
    <string name="shop_phone">Shop Phone</string>
    <string name="shop_address">Shop Address</string>

    <string name="google_play_store_url"><u>https://play.google.com/store/apps/details?id=com.buyer.flashfetch</u></string>
</resources>
