<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Refer"
    tools:showIn="@layout/activity_refer">

    <EditText
        android:gravity="center"
        android:inputType="text"
        android:id="@+id/refer_code"
        android:hint="@string/refer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/refer_code"
        android:id="@+id/enter_button"
        android:text="@string/enter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/skip_button"
        android:layout_alignParentBottom="true"
        android:text="@string/skip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>
