<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MapsActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_maps" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:clipToPadding="true"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/newestFirst"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/newestFirst"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/lowToHigh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price_low_to_high"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/highToLow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price_high_to_low"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/distance"
                android:layout_weight="1" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>